<resources>
    <string name="app_name">DocScan</string>
    <string name="about_item_text">About</string>
    <string name="share_log_item_text">Share log</string>
    <string name="sync_item_text">Upload</string>
    <string name="upload_item_text">Upload</string>
    <string name="help_item_text">Help</string>
    <string name="pdf_item_text">Saved PDFs</string>
    <string name="documents_item_text">Documents</string>
    <string name="camera_item_text">Camera</string>
    <string name="header_text">DocScan</string>
    <string name="account_edit_text">Set up account</string>
    <string name="account_not_logged_in">Anonymous user</string>
    <string name="account_logout">Logout</string>
    <string name="settings_item_text">Settings</string>
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_crop">Crop</string>
    <string name="dialog_btn_upload">Upload</string>
    <string name="dialog_btn_upload_again">Upload again</string>
    <string name="dialog_btn_cancel_upload">Cancel upload</string>
    <string name="dialog_btn_proceed">Proceed</string>
    <string name="dialog_btn_retry_now">Retry now</string>
    <string name="dialog_delete_image_title_singular">Delete image?</string>
    <string name="dialog_delete_image_title_plural">Delete images?</string>
    <string name="dialog_delete_image_text">Do you really want to delete this image?</string>
    <string name="dialog_delete_images_text_singular">Do you want to delete %1$d image?</string>
    <string name="dialog_delete_images_text_plural">Do you want to delete %1$d images?</string>
    <string name="activity_not_found_title">No standard app found</string>
    <string name="activity_not_found_text">Sorry, we could not find an app to open the file.</string>
    <string name="activity_not_found_email_title">No email app found</string>
    <string name="activity_not_found_email_text">Sorry, we could not find an email app to send the log files.</string>
    <string name="operation_export">Export</string>
    <string name="operation_upload">Upload</string>
    <string name="start_permission_title">Permission required</string>
    <string name="start_permission_retry_text">Do you want to give this permission?</string>
    <string name="start_permission_camera_text">The app requires permission to access the camera, otherwise it will not work.</string>
    <string name="start_permission_storage_text">The app requires permission to access your files, otherwise it will not work.</string>
    <string name="start_confirm_button_text">OK</string>
    <string name="start_cancel_button_text">Cancel</string>
    <string name="start_firebase_not_auth_text">Could not authenticate with Firebase / google-services. If you are a developer, you probably want the API key. In that case, take a look at the readme.</string>
    <string name="start_restore_button">Restore</string>
    <string name="start_clear_button">No</string>
    <string name="start_restore_backup_title">Restore backup?</string>
    <string name="start_restore_backup_text">It seems that you have DocScan installed before. Do you want to restore your previous documents?</string>
    <string name="taking_picture_text">Taking picture</string>
    <string name="force_shoot_button_text">Shoot anyway</string>
    <string name="locked_exposure_text">Locked auto-exposure</string>
    <string name="unlocked_exposure_text">Unlocked auto-exposure</string>
    <string name="camera_document_hint_title">Tip for documents</string>
    <string name="camera_lock_exposure_title">Locking exposure</string>
    <string name="camera_lock_exposure_msg">This locks the current exposure and white balance. Please note that we cannot lock these values, after you leave the camera view.</string>
    <string name="camera_text_dir_dialog_title">Set text direction</string>
    <string name="camera_text_dir_dialog_msg">Do you want to change the orientation of the document text?</string>
    <string name="do_not_show_again_text">Do not show this message again.</string>
    <string name="camera_status_title_prefix">Status:</string>
    <string name="camera_tab_manual">Manual</string>
    <string name="camera_tab_auto">Automatic</string>
    <string name="camera_tab_settings">Settings</string>
    <string name="table_head_task_text">Task</string>
    <string name="table_head_time_text">time (ms)</string>
    <string name="focus_measure_debug_text">Focus measure:</string>
    <string name="page_segmentation_debug_text">Page segmentation:</string>
    <string name="no_file_found_msg">No picture file found.</string>
    <string name="no_file_found_title">File not found</string>
    <string name="button_ok">OK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="instruction_series_fix">Hint for automatic mode: Try to solve the issue. If that does not work, switch to manual mode and take a picture manually.</string>
    <string name="instruction_empty">No page found</string>
    <string name="instruction_empty_detail">Could not find a page.\n\nSolution: Place the document on another background with a higher contrast to the document.</string>
    <string name="instruction_small">Move closer</string>
    <string name="instruction_small_detail">The document is too small.\n\nSolution: Decrease the distance between camera and document.</string>
    <string name="instruction_perspective">Change perspective</string>
    <string name="instruction_perspective_detail">The document boundary is not rectangular.\n\nSolution:\n(1) Get the document as parallel to the phone as possible.\n(2) Check if the boundary found is correct.</string>
    <string name="instruction_rotation">Rotate</string>
    <string name="instruction_rotation_detail">The document is rotated.\n\nSolution:\nRotate the document so that it is parallel to your phone.</string>
    <string name="instruction_no_focus_measured">Calculating focus</string>
    <string name="instruction_no_focus_measured_detail">Please wait, until focus measure is calculated.</string>
    <string name="instruction_unsharp">Not focused</string>
    <string name="instruction_unsharp_detail">The document appears to be not in focus.\n\nSolution:\nChange the focus point, by tapping on a part of the document that should be focused.</string>
    <string name="instruction_no_changes">Page already scanned</string>
    <string name="instruction_no_changes_detail">The page is already scanned.\n\nSometimes, if the page is very similar to the preceding page, it may appear to the app that it is the same page.</string>
    <string name="instruction_ok">OK</string>
    <string name="instruction_ok_detail">The document quality is fine for imaging.</string>
    <string name="instruction_unknown">state unknown</string>
    <string name="instruction_unknown_detail">state unknown</string>
    <string name="instruction_movement">movement detected</string>
    <string name="instruction_movement_detail">The image content or the phone is moving.\n\nSolution:\n(1) Hold the document still or (2) make sure the ScanTent or phone are not moving.</string>
    <string name="instruction_none"> </string>
    <string name="instruction_series_paused">Automatic mode paused</string>
    <string name="instruction_series_paused_detail">Automatic mode is currently paused. No images are taken and no quality measure is applied until the automatic mode is resumed.</string>
    <string name="instruction_searching_qr">searching QR code</string>
    <string name="instruction_searching_qr_detail">The app is searching for a QR code.</string>
    <string name="instruction_no_auto_focus">auto-focusing</string>
    <string name="instruction_no_auto_focus_detail">Camera could not perform an auto focus.\n\nSolution:\nChange the focus point, by tapping on a part of the document that should be focused.</string>
    <string name="toast_series_paused">Automated imaging paused</string>
    <string name="toast_series_started">Images are now taken automatically</string>
    <string name="toast_single">Images are taken manually</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_check_input_toast">Please check your login credentials.</string>
    <string name="login_welcome_text">Welcome</string>
    <string name="login_loading_text">Login, please wait</string>
    <string name="flash_mode">Flash mode</string>
    <string name="show_grid_item_title">Show grid</string>
    <string name="upload_item">Upload</string>
    <string name="lock_exposure_item">Lock exposure and white balance</string>
    <string name="unlock_exposure_item">Unlock exposure and white balance</string>
    <string name="sync_menu_upload_item_title">Start upload</string>
    <string name="sync_menu_delete_item_title">Delete item</string>
    <string name="sync_menu_select_all_item_title">Select all items</string>
    <string name="gallery_menu_edit_item_title">Edit document</string>
    <string name="gallery_menu_delete_item_title">Delete item</string>
    <string name="gallery_menu_select_all_item_title">Select all items</string>
    <string name="gallery_menu_crop_item_title">Crop item</string>
    <string name="gallery_menu_rotate_item_title">Rotate right</string>
    <string name="action_document_create_title">New document</string>
    <string name="action_document_select_title">Select document</string>
    <string name="action_document_crop_title">Crop images</string>
    <string name="action_document_qr_title">Document from QR code</string>
    <string name="action_document_upload_document">Upload</string>
    <string name="action_document_pdf_title">Save as PDF</string>
    <string name="action_document_delete_document">Delete</string>
    <string name="action_document_edit_document">Edit document</string>
    <string name="action_document_continue_document">Continue imaging</string>
    <string name="action_rotate_left_title">Rotate left</string>
    <string name="action_rotate_right_title">Rotate right</string>
    <string name="action_setting_show_gallery">Show gallery</string>
    <string name="action_setting_show_grid">Show grid</string>
    <string name="action_setting_hide_grid">Hide grid</string>
    <string name="action_setting_lock_wb">Lock white balance and exposure</string>
    <string name="action_setting_unlock_wb">Unlock white balance and exposure</string>
    <string name="action_setting_qr_mode">Create Document from QR code</string>
    <string name="segmentation_result_label">result:</string>
    <string name="segmentation_label_model_name">model name</string>
    <string name="segmentation_label_model_full_name">full name</string>
    <string name="segmentation_label_gpu">isGPU</string>
    <string name="segmentation_label_model_size">model input size</string>
    <string name="segmentation_label_training_size">model training size</string>
    <string name="segmentation_label_image_size">image size</string>
    <string name="segmentation_label_total_task_time">total task time</string>
    <string name="segmentation_label_decode_image">decode image</string>
    <string name="segmentation_label_down_scale">down-scale/quantize</string>
    <string name="segmentation_label_load_interpreter">load interpreter</string>
    <string name="segmentation_label_allocate_buffer">allocateOutputBuffer</string>
    <string name="segmentation_label_inference">inference</string>
    <string name="segmentation_label_flatten_mask">flattenMask</string>
    <string name="segmentation_label_rescale">rescale</string>
    <string name="segmentatio_label_gpu_checkbox">GPU</string>
</resources>