<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--This is actually not used, I just needed the id's...-->
    <item
        android:id="@+id/action_show_gallery_item"
        android:icon="@drawable/ic_grid_on_gray_24dp"
        android:title="@string/action_setting_show_gallery" />
    <item
        android:id="@+id/action_show_grid_item"
        android:icon="@drawable/ic_grid_on_gray_24dp"
        android:title="@string/action_setting_show_grid" />
    <item
        android:id="@+id/action_hide_grid_item"
        android:icon="@drawable/ic_grid_off_gray_24dp"
        android:title="@string/action_setting_hide_grid" />

    <item
        android:id="@+id/action_lock_wb_item"
        android:icon="@drawable/ic_lock_outline_gray_24dp"
        android:title="@string/action_setting_lock_wb" />
    <item
        android:id="@+id/action_unlock_wb_item"
        android:icon="@drawable/ic_lock_open_gray_24dp"
        android:title="@string/action_setting_unlock_wb" />
    <item
        android:id="@+id/action_rotate_text_dir_item"
        android:icon="@drawable/ic_rotate_text_gray_24px"
        android:title="@string/action_setting_unlock_wb" />

    <item
        android:id="@+id/action_qr_item"
        android:icon="@drawable/ic_qr_code_gray"
        android:title="@string/action_setting_qr_mode" />

    <item
        android:id="@+id/action_document_qr_item"
        android:icon="@drawable/ic_qr_code_gray"
        android:title="@string/action_setting_qr_mode" />

    <item
        android:id="@+id/action_rotate_text_dir_left"
        android:icon="@drawable/ic_rotate_left_white_24dp"
        android:title="@string/action_rotate_left_title" />

    <item
        android:id="@+id/action_rotate_text_dir_right"
        android:icon="@drawable/ic_rotate_right_white_24dp"
        android:title="@string/action_rotate_right_title" />


</menu>