<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/gallery_menu_main"
        >
        <item
            android:id="@+id/gallery_menu_rename_item"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/gallery_menu_edit_item_title"
            app:showAsAction="always"
            android:onClick="editDocument"
            />
        <!--<item-->
            <!--android:id="@+id/gallery_menu_document_item"-->
            <!--android:icon="@drawable/ic_folder_white_24dp"-->
            <!--android:title="@string/gallery_menu_document_item_title"-->
            <!--app:showAsAction="always"-->
            <!--/>-->
    </group>

    <group
        android:id="@+id/gallery_menu_selection"
        android:visible="false"
        >
        <item
            android:icon="@drawable/ic_select_all_black_24dp"
            android:title="@string/gallery_menu_select_all_item_title"
            android:onClick="selectAllItems"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/gallery_menu_crop"
            android:icon="@drawable/ic_crop_black_24dp"
            android:title="@string/gallery_menu_crop_item_title"
            android:onClick="cropSelectedItems"
            app:showAsAction="always"
            />
        <item
            android:icon="@drawable/ic_rotate_right_black_24dp"
            android:title="@string/gallery_menu_rotate_item_title"
            android:onClick="rotateSelectedItems"
            app:showAsAction="always"
            />
        <item
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/gallery_menu_delete_item_title"
            android:onClick="deleteSelectedItems"
            app:showAsAction="always"
            />
    </group>



</menu>