<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/flash_mode_item2"-->
        <!--android:icon="@drawable/ic_flash_off"-->
        <!--android:title="@string/flash_mode"-->
        <!--android:visible="true"-->
        <!--app:showAsAction="always"-->
        <!--/>-->


    <item
        android:id="@+id/flash_mode_item"
        android:icon="@drawable/ic_flash_off_white_24dp"
        android:title="@string/flash_mode"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/grid_item"
        android:title="@string/show_grid_item_title"
        android:visible="true"
        app:showAsAction="never"
        />

    <!--<item-->
        <!--android:id="@+id/gallery_item"-->
        <!--android:icon="@drawable/ic_collections_white_24dp"-->
        <!--android:title="@string/gallery_item_title"-->
        <!--android:visible="true"-->
        <!--app:showAsAction="never"-->
        <!--android:onClick="startGalleryActivity"-->
        <!--/>-->

    <item
        android:id="@+id/upload_item"
        android:icon="@drawable/ic_cloud_upload_white_24dp"
        android:title="@string/upload_item"
        android:visible="true"
        />
    <item
        android:id="@+id/lock_exposure_item"
        android:title="@string/lock_exposure_item"
        android:visible="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/unlock_exposure_item"
        android:title="@string/unlock_exposure_item"
        android:visible="false"
        app:showAsAction="never"
        />
    <!--<item-->
        <!--android:id="@+id/show_grid_item"-->
        <!--android:title="@string/unlock_exposure_item"-->
        <!--android:visible="false"-->
        <!--app:showAsAction="never"-->
        <!--android:onClick="unlockExposure"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/white_balance_item"-->
        <!--android:title="@string/white_balance_text"-->
        <!--android:visible="true"-->
        <!--app:showAsAction="never"-->
        <!--&gt;-->
        <!--<menu></menu>-->
    <!--</item>-->


</menu>