<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="at.ac.tuwien.caa.docscan.ui.segmentation.SegmentationViewModel" />

        <variable
            name="result"
            type="at.ac.tuwien.caa.docscan.ui.segmentation.model.ModelExecutionResult" />

        <import type="android.view.View" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/AppDarkTheme">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="150dp"
                android:visibility="gone"
                tools:itemCount="3"
                tools:listitem="@layout/item_segmentation_result"
                tools:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/light_gray"
            app:behavior_hideable="true"
            app:behavior_peekHeight="150dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_result_label"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{result.meta.inferenceTaskTimeAsString}"
                        android:textSize="16sp"
                        tools:text="513" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout
                    style="@style/TableRow"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/modelInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/segmentation_label_model_name"
                        app:boxStrokeColor="@color/colorControlHighlight"
                        app:endIconTint="@color/colorControlHighlight"
                        app:hintTextColor="@color/colorControlHighlight">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_gpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:checked="true"
                        android:paddingStart="8dp"
                        android:text="@string/segmentatio_label_gpu_checkbox"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:checked="false"
                        android:paddingStart="8dp"
                        android:text="Run All"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_gpu"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{String.valueOf(result.meta.isGPU)}"
                        tools:text="true" />
                </LinearLayout>

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_training_size"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{String.valueOf(result.meta.model.inputSize)}"
                        tools:text="513" />
                </LinearLayout>

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_model_size"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{String.valueOf(result.meta.modelInputSize)}"
                        tools:text="513" />
                </LinearLayout>

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_image_size"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{result.meta.imageSize}"
                        tools:text="1920x1080" />
                </LinearLayout>

                <LinearLayout style="@style/TableRow">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_model_full_name"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{result.meta.model.modelFileName}"
                        tools:text="1920x1080" />
                </LinearLayout>

                <LinearLayout
                    style="@style/TableRow"
                    android:layout_marginTop="8dp">

                    <TextView
                        style="@style/TableRowItemKey"
                        android:text="@string/segmentation_label_total_task_time"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TableRowItemValue"
                        android:text="@{result.meta.totalTaskTime}"
                        tools:text="3112 ms" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_decode_image" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.decodeImageFromFileTaskTime)}"
                            tools:text="12 ms" />

                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_down_scale" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.downScalingTaskTime)}"
                            tools:text="12 ms" />

                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_load_interpreter" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.loadInterpreterTaskTime)}"
                            tools:text="12 ms" />
                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_allocate_buffer" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.allocateOutputBufferTaskTime)}"
                            tools:text="12 ms" />
                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_inference" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.inferenceTaskTime)}"
                            tools:text="12 ms" />
                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_flatten_mask" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.flattenMaskTaskTime)}"
                            tools:text="12 ms" />
                    </LinearLayout>

                    <LinearLayout style="@style/TableRow">

                        <TextView
                            style="@style/TableRowItemKey"
                            android:text="@string/segmentation_label_rescale" />

                        <TextView
                            style="@style/TableRowItemValue"
                            android:text="@{String.valueOf(result.meta.rescalingTaskTime)}"
                            tools:text="12 ms" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </FrameLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.observableProgress ? View.VISIBLE : View.GONE}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

